fix gap

--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 170px;
+  gap: 200px;
   margin-top: auto;
 }
 
